--- a/vimmasite/vimma/static/vimma/components/vm-detail/dummy-vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/dummy-vm-detail.html
@@ -2,9 +2,14 @@
 <link rel="import" href="../bower_components/core-elements/core-elements.html">
 <link rel="import" href="../bower_components/paper-elements/paper-elements.html">
 
-<!-- see <vm-detail> for ajaxInProgress and ajax-{start|end} events -->
-<polymer-element name="dummy-vm-detail" attributes="vmid ajaxInProgress">
+<link rel="import" href="../ajax-state/ajax-state.html">
+<link rel="import" href="../error-display/error-display.html">
+
+<polymer-element name="dummy-vm-detail" attributes="vmid">
   <template>
+
+    <ajax-state id="ajax"></ajax-state>
+
     <template if="{{loading}}">
       Loading…
     </template>
@@ -13,6 +18,12 @@
       <template if="{{loadingSucceeded}}">
         <template bind ref="main"></template>
       </template>
+    </template>
+
+    <template if="{{!$.ajax.inProgress && !$.ajax.success}}">
+      <div>
+        <error-display text={{$.ajax.errorText}}></error-display>
+      </div>
     </template>
 
     <template id="main">
