--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
@@ -6,11 +6,13 @@
 <link rel="import" href="aws-vm-detail.html">
 <link rel="import" href="vm-schedule-picker.html">
 <link rel="import" href="../error-display/error-display.html">
+<link rel="import" href="../ajax-state/ajax-state.html">
 
-<polymer-element name="vm-detail" attributes="vmid"
-  on-ajax-start="{{onAjaxStart}}" on-ajax-end="{{onAjaxEnd}}">
+<polymer-element name="vm-detail" attributes="vmid">
   <template>
     <link rel="stylesheet" type="text/css" href="vm-detail.css">
+
+    <ajax-state id="ajax"></ajax-state>
 
     <template if="{{loading}}">
       Loading…
@@ -22,9 +24,9 @@
       </template>
     </template>
 
-    <template if="{{!ajaxInProgress && !ajaxSuccess}}">
+    <template if="{{!$.ajax.inProgress && !$.ajax.success}}">
       <div>
-        <error-display text={{ajaxErrTxt}}></error-display>
+        <error-display text={{$.ajax.errorText}}></error-display>
       </div>
     </template>
 
@@ -44,7 +46,7 @@
         </paper-button>
 
         <paper-button id="reload" on-click="{{reload}}" raised
-          title="Refresh" disabled?="{{ajaxInProgress}}">
+          title="Refresh" disabled?="{{$.ajax.inProgress}}">
           <core-icon icon="refresh"></core-icon>
         </paper-button>
 
@@ -55,11 +57,11 @@
         <span id="project-name">{{project.name}}</span>
 
         <paper-button id="reboot" on-click="{{reboot}}" raised
-          title="Reboot" disabled?="{{ajaxInProgress}}">
+          title="Reboot" disabled?="{{$.ajax.inProgress}}">
           <core-icon icon="rotate-left"></core-icon>
         </paper-button>
         <paper-button id="destroy" on-click="{{destroy}}" raised
-          title="Destroy" disabled?="{{ajaxInProgress}}">
+          title="Destroy" disabled?="{{$.ajax.inProgress}}">
           <core-icon icon="delete"></core-icon>
         </paper-button>
       </div>
@@ -72,7 +74,7 @@
 
     <template id="vm-expanded">
       <template if="{{provider.type == 'dummy'}}">
-        <dummy-vm-detail vmid="{{vmid}}" ajaxInProgress="{{ajaxInProgress}}">
+        <dummy-vm-detail vmid="{{vmid}}">
         </dummy-vm-detail>
       </template>
 
@@ -112,15 +114,15 @@
         <br>
         Keep
         <paper-dropdown-menu selected="{{overrideSchedState}}" valueattr="key"
-          disabled?="{{ajaxInProgress}}"
+          disabled?="{{$.ajax.inProgress}}"
           on-core-select="{{overrideSchedStateSelected}}">
           <paper-item label="Powered ON" key="on"></paper-item>
           <paper-item label="Powered OFF" key="off"></paper-item>
         </paper-dropdown-menu>
         for
         <input type="number" value="{{overrideSchedMins}}"
-          disabled?="{{ajaxInProgress}}"> min
-        <button on-click="{{overrideSet}}" disabled?="{{ajaxInProgress}}">
+          disabled?="{{$.ajax.inProgress}}"> min
+        <button on-click="{{overrideSet}}" disabled?="{{$.ajax.inProgress}}">
           Set override
         </button>
       </div>
