--- a/vimmasite/vimma/templates/vimma/base.html
+++ b/vimmasite/vimma/templates/vimma/base.html
@@ -38,6 +38,7 @@
           vimmaEndpointRebootVM = '{% url "rebootVM" %}',
           vimmaEndpointDestroyVM = '{% url "destroyVM" %}',
           vimmaEndpointOverrideSchedule = '{% url "overrideSchedule" %}',
+          vimmaEndpointChangeVMSchedule = '{% url "changeVMSchedule" %}',
 
           vimmaUserId = {{ user.id }},
 
