--- a/vimmasite/vimma/templates/vimma/index.html
+++ b/vimmasite/vimma/templates/vimma/index.html
@@ -2,11 +2,14 @@
 {% load staticfiles %}
 
 {% block head %}
+  <link rel="stylesheet" type="text/css" href="{% static 'vimma/components/bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
+
   <script src="{% static 'vimma/components/bower_components/platform/platform.js' %}"></script>
   <link rel="import" href="{% static 'vimma/components/index-elem/index-elem.html' %}">
 
-  <script src="{% static 'vimma/js/lib/jquery-2.1.1.min.js' %}"></script>
-  <script src="{% static 'vimma/js/lib/jquery.cookie.js' %}"></script>
+  <script src="{% static 'vimma/components/bower_components/jquery/dist/jquery.min.js' %}"></script>
+  <script src="{% static 'vimma/components/bower_components/jquery.cookie/jquery.cookie.js' %}"></script>
+  <!--script src="{% static 'vimma/components/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script-->
 {% endblock %}
 
 {% block body %}
