add more navigation URLs in the single-page app

--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -28,7 +28,7 @@
     </template>
 
     <template if="{{selectedIdx == 1}}">
-      <projects-tab></projects-tab>
+      <projects-tab frag="{{$.ajaxFrag.tail}}"></projects-tab>
     </template>
 
     <template if="{{selectedIdx == 2}}">
