add expanded VM navigation
bug: when on #!vms/1 clicking Projects jumps to #!projects/1/vms instead
of #!projects

--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -24,7 +24,7 @@
     </paper-tabs>
 
     <template if="{{selectedIdx == 0}}">
-      <vms-tab></vms-tab>
+      <vms-tab frag="{{$.ajaxFrag.tail}}"></vms-tab>
     </template>
 
     <template if="{{selectedIdx == 1}}">
