--- a/vimmasite/vimma/static/vimma/components/project-detail/project-detail.html
+++ b/vimmasite/vimma/static/vimma/components/project-detail/project-detail.html
@@ -61,7 +61,7 @@
     <template id="vm-list">
       Showing {{vms.length}} VMs.
 
-      <vm-list vmids="{{vmIds}}"></vm-list>
+      <vm-list vmids="{{vmIds}}" frag="{{$.ajaxFrag.tail}}"></vm-list>
     </template>
   </template>
 
