--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
@@ -10,7 +10,7 @@
 <link rel="import" href="../error-display/error-display.html">
 <link rel="import" href="../ajax-state/ajax-state.html">
 
-<polymer-element name="vm-detail" attributes="vmid">
+<polymer-element name="vm-detail" attributes="vmid initiallyExpanded">
   <template>
     <link rel="stylesheet" type="text/css" href="vm-detail.css">
 
